class StringConstants {
  // General
  static const String cancel = 'Cancel';
  static const String close = 'Close';
  static const String ok = 'OK';
  static const String delete = 'Delete';
  static const String welcome = 'Welcome';
  static const String welcomeMessage =
      'We made this Example Wallet App to help developers integrate the Reown\'s WalletKit SDK and provide an amazing experience to their users.';
  static const String getStarted = 'Get Started';
  static const String wouldLikeToConnect = 'would like to connect';
  static const String message = 'Message';
  static const String invalidUri = 'Invalid URI';

  // Apps Pages
  static const String apps = 'Apps';
  static const String noApps =
      'Apps you connect with will appear here.\nTo connect, scan a QR code or paste the code that\'s displayed on the app.';

  // QR Code Scanning
  static const String scanPairing = 'Scan the code';

  // Uri Input Popup
  static const String enterUri = 'Enter a WalletConnect URI';
  static const String enterUriMessage =
      'To get the URI press the "copy to clipboard" button in the wallet connection interfaces.';
  static const String textFieldPlaceholder = 'wc://a13aef...';

  // Session Proposal
  static const String chains = 'Chains';
  static const String accounts = 'Accounts';
  static const String methods = 'Methods';
  static const String events = 'Events';

  // Request
  static const String approve = 'Approve';
  static const String reject = 'Reject';

  // Main Page
  static const String appTitle = 'Flutter Wallet';
  static const String connectPageTitle = 'Connections';
  static const String pairingsPageTitle = 'Pairings';
  static const String sessionsPageTitle = 'Sessions';
  static const String authPageTitle = 'Auth';
  static const String settingsPageTitle = 'Settings';

  // Connect Page
  static const String selectChains = 'Select chains:';
  static const String testnetsOnly = 'Testnets only?';
  static const String scanQrCode = 'Scan QR Code';
  static const String urlCopiedToClipboard = 'URL copied to clipboard';
  static const String connect = 'Connect';
  static const String connectionEstablished = 'Session established';
  static const String connectionFailed = 'Session setup failed';
  static const String authSucceeded = 'Authentication Successful';
  static const String authFailed = 'Authentication Failed';

  // Pairings Page
  static const String pairings = 'Pairings';
  static const String deletePairing = 'Delete Pairing?';

  // Sessions Page
  static const String sessions = 'Sessions';
  static const String noSessionSelected = 'No session selected';
  static const String sessionTopic = 'Session Topic: ';
}
