...
    double maxHeight = isPortrait
        ? (kListItemHeight * 6)
        : ResponsiveData.maxHeightOf(context);

    final isSignIn = _emailEnabled || _socialsEnabled;
    return ModalNavbar(
      title: isSignIn ? 'Sign in' : 'Connect wallet',
      leftAction: NavbarActionButton(
        asset: 'lib/modal/assets/icons/help.svg',
        action: () => _widgetStack.push(
          const AboutWallets(),
          event: ClickWalletHelpEvent(),
        ),
...
