...
      color: Colors.transparent,
      padding: const EdgeInsets.all(kPadding8),
      child: Row(
        children: [
          Expanded(
            child: ModalSearchBar(
              hint: 'Search wallet',
              initialValue: GetIt.I<IExplorerService>().searchValue,
              onTextChanged: (value) {
                GetIt.I<IExplorerService>().search(query: value);
              },
              onDismissKeyboard: (clear) {
                FocusManager.instance.primaryFocus?.unfocus();
...
