...
      },
      disconnectOnDispose: true,
      customWallets: [
        ReownAppKitModalWalletInfo(
          listing: AppKitModalWalletListing(
            id: '00001',
            name: 'Reown Web Sample',
            homepage: 'https://react-wallet.walletconnect.com',
            imageId:
                'https://avatars.githubusercontent.com/u/179229932?s=200&v=4',
            order: 1,
            webappLink: 'https://react-wallet.walletconnect.com',
          ),
...
