...
                  const SizedBox.square(dimension: 20.0),
                  // ERROR TITLE
                  errorOpeningOrReject(errorEvent)
                      ? Text(
                          errorEvent is ErrorOpeningWallet
                              ? 'Error opening wallet'
                              : 'Connection declined',
                          textAlign: TextAlign.center,
                          style: themeData.textStyles.paragraph500.copyWith(
                            color: themeColors.error100,
                          ),
                        )
                      : Text(
...
