...
                if (Navigator.canPop(context)) {
                  Navigator.of(context).pop(WCBottomSheetResult.all);
                }
              },
              type: CustomButtonType.valid,
              child: Text(
                'Sign All',
                style: context.textStyles.buttonText,
                textAlign: TextAlign.center,
              ),
            ),
          ],
        ),
...
