...
}

class MethodsConstants {
  static const walletSwitchEthChain = 'wallet_switchEthereumChain';
  static const walletAddEthChain = 'wallet_addEthereumChain';
  static const ethSendTransaction = 'eth_sendTransaction';
  static const requiredMethods = [ethSendTransaction, 'personal_sign'];
  static const optionalMethods = [
    'eth_accounts',
    'eth_requestAccounts',
    'eth_sendRawTransaction',
    'eth_sign',
    'eth_signTransaction',
...
