appId: com.walletconnect.flutterdapp.internal
---
# Launch and verify initial state
- launchApp
- takeScreenshot:
    path: .maestro/screenshots/1
- extendedWaitUntil:
    visible: "AppKitModalConnectButton enabled"
    timeout: 15000
- takeScreenshot:
    path: .maestro/screenshots/2

# Wait for connect button to become enabled and verify UI
- assertVisible: "Connect"
- assertVisible: "Network"

# Initiate connection and handle modal
- tapOn: "AppKitModalConnectButton enabled"
- extendedWaitUntil:
    visible: "Sign in"
    timeout: 15000
- takeScreenshot:
    path: .maestro/screenshots/3
- waitForAnimationToEnd: # Social/Email is loadinging at this point and could take up to 30 secs
    timeout: 30000
- takeScreenshot:
    path: .maestro/screenshots/4
- assertVisible: "FL Wallet (internal) enabled"

# Select wallet and approve
- tapOn: "FL Wallet (internal) enabled"
- extendedWaitUntil:
    visible: "Reown's AppKit would like to connect"
    timeout: 15000
- takeScreenshot:
    path: .maestro/screenshots/5
- tapOn: "Approve" # on Approve the flow is redirected back to the initiaing dapp
- extendedWaitUntil:
    visible: "Connected with FL WalletKit Sample"
    timeout: 15000
- takeScreenshot:
    path: .maestro/screenshots/6

# Verify account and disconnect
- assertVisible: "AppKitModalAccountButton enabled"
- tapOn: "Disconnect"
- extendedWaitUntil:
    notVisible: "Connected with FL WalletKit Sample"
    timeout: 15000      # Timeout in milliseconds

# Confirm app returns to initial state
- assertVisible: "Connect"
- assertVisible: "Network"
# - stopRecording


# - tapOn: |-
#     Settings page button
#     Settings page icon
#     Settings
#     Tab 3 of 3

# - runFlow:
#     when:
#       visible: "With Socials Switch false"
#     commands:
#         - tapOn: "With Socials Switch false"
#         - waitForAnimationToEnd
#         - assertVisible: "App will be closed to apply changes"
#         - tapOn: "Ok"
#         - killApp # Kills the app (adb shell am kill)
#         - launchApp
#         - tapOn: |-
#             Settings page button
#             Settings page icon
#             Settings
#             Tab 3 of 3
#         - assertVisible: "With Socials Switch true"
# - runFlow:
#     when:
#       visible: "With Socials Switch true"
#     commands:
#         - tapOn: "With Socials Switch true"
#         - waitForAnimationToEnd
#         - assertVisible: "App will be closed to apply changes"
#         - tapOn: "Ok"
#         - killApp # Kills the app (adb shell am kill)
#         - launchApp
#         - tapOn: |-
#             Settings page button
#             Settings page icon
#             Settings
#             Tab 3 of 3
#         - assertVisible: "With Socials Switch false"

# - tapOn: |-
#     Connect page button
#     Connect page icon
#     Connect
#     Tab 1 of 3