appId: com.walletconnect.flutterdapp.internal
---

- startRecording: "native_connection_rejected"

- runFlow:
    file: ../shared/launch_and_check_relay_mode.yaml

- runFlow:
    file: ../shared/select_flutter_sample_wallet.yaml

- tapOn: "Reject"
- extendedWaitUntil:
    visible: "Connection declined"
    timeout: 30000

- tapOn: "Scrim"

- assertVisible: "Network"
- assertVisible: "Connect"

- stopRecording